--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "gh-pages": "^6.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-fontawesome": "^1.7.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.1"
   },
   "devDependencies": {
